--- a/lmao.html
+++ b/lmao.html
@@ -21,7 +21,7 @@
     <div class="PAKYU">
         <h1>Pakyu Hehe</h1>
         <div class="href">
-        <a href="file:///C:/Users/ADMIN/Downloads/lmao%20(2).html">Pindutin mo tumesting ka</a>
+        <a href="https://doilooklikekurt.github.io/Limaw/lmao%20(2).html">Pindutin mo tumesting ka</a>
     </div>
     </div>
 </body>
